# Rick_and_Morty

./: .env  Extract.py  README.md  load.py  pyproject.toml
rick_and_morty_dbt/: dbt_project.yml
rick_and_morty_dbt/models/marts/: dim_episodios.sql  dim_localizacoes.sql  dim_personagens.sql  fato_aparicoes_episodio.sql  fato_residentes_localizacao.sql
rick_and_morty_dbt/models/staging/: source.yml  stg_episodios.sql  stg_localizacoes.sql  stg_personagens.sql
