[project]
name = "rick-and-morty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-postgres>=1.10.0",
    "logging>=0.4.9.6",
    "pandas>=3.0.3",
    "psycopg2>=2.9.12",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
]
